src/tests/resources/players/invalid/wrongNumberArguments_1.players
01; Андрей Иванов; B; 11; F
02; Артем Петров; M; 11; F
03; Слава Трубицин; M; 11; F
04; Света Прищенко; G; 11; F
05; Маша Ивановская; Д; 11; F
06; Катя Попова; W; 11; F